# sinew

./: .gitignore  Cargo.toml  README.ja.md  README.md  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: broker.rs  lib.rs  main.rs  mcp.rs  process.rs  types.rs
src/broker/: db.rs  routes.rs
src/mcp/: client.rs  launcher.rs  lifecycle.rs  server.rs  summary.rs  tools.rs
tests/: broker_integration.rs  mcp_integration.rs
