[package]
name = "sinew"
version = "0.1.0"
edition = "2024"
description = "Peer discovery and messaging for Claude Code sessions"
repository = "https://github.com/HalsekiRaika/sinew"
readme = "README.md"
keywords = ["claude", "mcp", "peer", "messaging"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (Broker)
axum = "0.8"

# HTTP client (MCP Server -> Broker)
reqwest = { version = "0.13", features = ["json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# MCP protocol
rmcp = { version = "1.3", features = ["server", "macros", "transport-io"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
jiff = "0.2"
rand = "0.9"
tokio-util = "0.7"

# Error handling
thiserror = "2"
error-stack = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }
